# psychotherapist_bot

./: .editorconfig  .pre-commit-config.yaml  alembic.ini  backup_and_send.py  init_db.sql  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py  reset_db_force.py  utils.py  webhook.py
backups/: backup_2025-04-24_16-18.dump  backup_2025-04-24_16-19.dump
migrations/: env.py
migrations/versions/: 4d3bfc64ff32_add_full_name_column.py  cc338aaa7632_baseline.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
