[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
known_first_party = ["utils", "keyboards", "services"]
known_third_party = ["aiogram", "sqlalchemy", "httpx", "pytz", "dotenv"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.mypy]
python_version = 3.11
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
files = ["main.py", "utils.py"]
exclude = ["migrations/"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
